--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -2,22 +2,22 @@
     z-index: 0;
     width: 400px;
     height: 609px;
-    opacity: 0;
     position: absolute;
     top: 0;
     right: 15%;
     bottom: 0;
     left: auto;
     margin: auto;
-  
-    svg {
+    //opacity: 0;
+
+    svg{
       width: 100%;
       height: auto;
       bottom: 0;
       transform: rotateZ(30deg) !important;
     }
-  
-    .solid-logo {
+
+    .solid-logo{
       position: absolute;
       top: auto;
       right: auto;
@@ -26,12 +26,14 @@
       margin: auto;
       width: 100%;
       opacity: 0;
-      transform: rotateZ(30deg) !important;
+      transform: rotateZ(30deg);
       z-index: 1;
     }
-  }
-  
-  .svg-container {
-    stroke: #ffd700;
-    stroke-width: 10;
-  }
+}
+
+.svg-container{
+  stroke: #ffd700;
+  stroke-width: 10px;
+}
+
+    
