--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -14,3 +14,12 @@
         color: #ffd700;
     }
 }
+
+@media screen and (max-width: 1200px){
+    .text-shpere{
+        display: none;
+        
+    }
+    
+
+}
